1999-11-19  Larry Jones <larry.jones@sdrc.com>

	* sanity.sh: Reestablish check for running as root (using ``id -u''
	instead of ``whoami'').

	* sanity.sh(dotest, dotest_lit, dotest_fail, dotest_status,
	dotest_sort): Eval the command so quoting and pipes work right.
	(spacefiles, dirs, rcslib, modules, unedit-without-baserev,
	ignore, rcs, rcs2, history, tagdate, pserver, server, server2)
	Simplify various tests based on above.

1999-11-19  Karl Fogel  <kfogel@red-bean.com>

	* mkmodules.c (init): make history file world-writeable after
	creating it, since it needs to be writeable for virtually any
	CVS operation.
	
1999-11-10  Jim Kingdon  <http://developer.redhat.com/>

	* admin.c: Revert change to add -H command option.  The help
	invocation is "cvs -H admin" not "cvs admin -H" (see cvs.texinfo,
	basicb-21 in sanity.sh; fix to cvs.1)

1999-11-08  Jim Kingdon  <http://developer.redhat.com/>

	* log.c (cvslog): If client_active, send options to the server
	based on our parsed options rather than trying to send the exact
	strings specified (using canonical forms, like RFC822/1123
	dates, in the protocol is just cleaner).
	(send_one, send_arg_list): New functions, helpers for above.
	* sanity.sh (logopt-6a): New test, for this fix.

1999-11-09  K.J. Paradise <kj@sourcegear.com>
	
	* admin.c: made the -H option do what it is documented to 
	do.  a

1999-11-08  Tom Tromey  <tromey@cygnus.com>

	* client.c (connect_to_gserver): Print more error text if gssapi
	initialization fails.  From Assar Westerlund <assar@sics.se>.

1999-11-06  Larry Jones <larry.jones@sdrc.com>

	*sanity.sh(rcs3-5): Remote output can be out-of-order, so need a
	more general pattern to match the assertion failure.

1999-11-05  K.J. Paradise (kj@sourcegear.com)

	* history.c: Added a trap to verify that if a 
	read(file, buffer,blocksize) returns less than blocksize, 
	that we really are at the end of the file.  I can't easily
	come up with a test case where this code gets touched, so 